# astra-test-assignment

./: .gitignore  CMakeLists.txt  custom-model.cpp  custom-model.h  custom-search-wrapper.cpp  custom-search-wrapper.h  dirview.pro  main.cpp
scripts/: build.py
src/: CMakeLists.txt  main.cpp
src/model/: custom-search-wrapper.cpp  custom-search-wrapper.h
